--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,5 +5,6 @@
     "author": "ijgnd",
     "version": "v0.3.0",
     "homepage": "https://github.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style",
-    "mod": 1563291068
+    "mod": 1563291068,
+    "conflicts": ["1215991469"]
 } 
