--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+src/forms/*
+settings.pypickle
+
+
 # Environments
 .env
 .venv
@@ -7,7 +11,6 @@ ENV/
 env.bak/
 venv.bak/
 
-src/forms/*
 
 *~
 *.zip
@@ -20,5 +23,4 @@ meta.json
 checksums.csv
 *___bak_*
 *___note*
-
 ideas,discarded/*
