--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "editor: apply font color, background color, custom class, custom style",
+    "name": "Custom Styles (font color, background colour, classes)",
     "package": "1899278645",
     "min_point_version": 24,
     "branch_index": 1,
