manifest.json - change package name
now .ankiaddon installs can be updated from
ankiweb.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,4 @@
 {
     "name": "Custom Styles (font color, background colour, classes)",
-    "package": "custom_styles"
+    "package": "1899278645"
 }
